tests/data/valid_dtds/parameter_entities/test.dtd
<!ENTITY % foo "foo">
<!ENTITY % bar	"bar">
<!ENTITY % baz
"baz">
<!ENTITY % quux"quux">
