tests/data/invalid_dtds/parameter_entities_internal_2/test.dtd
<!ENTITY % internal2 bad>
